# firefly

./: .gitignore  Makefile  README.md  api_test.py  build.py  dlg_batch.py  dlg_calendar.py  dlg_columns.py  dlg_ingest.py  dlg_sendto.py  dlg_subclips.py  firefly.desktop  firefly.py  firefly.spec  firefly_listener.py  firefly_starter.py  firefly_view.py  firefly_widgets.py  fix_permissions.py  local_settings.default  mod_detail.py  mod_rundown_model.py  mod_scheduler.py  mod_scheduler_model.py  pyproject.toml  rex.json  rex.py  run-poetry.sh  settings.json  setup.cfg  skin.css  skin.scss  win_build.py
.github/workflows/: main.yml
firefly/: __init__.py  api.py  application.py  base_module.py  cellformat.py  common.py  config.py  default_state.py  dlg_dramatica.py  dlg_event.py  dlg_sites.py  dlg_system.py  filesystem.py  firefly_menu.py  firefly_rc.py  listener.py  main_window.py  menu.py  mod_browser.py  mod_preview.py  mod_rundown.py  multiselect.py  objects.py  qt.py  settings.py  starter.py  syntaxhl.py  user.py  version.py  version_info.py  view.py  widgets.py
firefly/core/: __init__.py  base_objects.py  common.py  meta_format.py  meta_validate.py  metadata.py
firefly/dialogs/: batch.py  batch_ops.py  calendar.py  columns_select.py  dramatica.py  event.py  ingest.py  login.py  rundown.py  send_to.py  site_select.py  subclips.py  system.py  text_editor.py  texteditor.py
firefly/helpers/: scheduling.py
firefly/metadata/: __init__.py  format.py  normalize.py
firefly/modules/: __init__.py  browser.py  browser_model.py  detail.py  detail_subclips.py  jobs.py  (+14 more)
nx/: __init__.py  cellformat.py  colors.py  common.py  connection.py  firefly_object.py  objects.py
proxyplayer/: utils.py  videoplayer.py
(+23 files in other folders)
