[tool.poetry]
name = "firefly"
version = "5.41.0"
description = "Desktop client application for Nebula - Open source media asset management and broadcast automation system."
authors = ["Martin Wacker <martas@imm.cz>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
websocket-client = "^1.3.1"
nxtools = "^1.6"
PySide6 = "^6.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
PyQtEnumConverter = "^1.0"
briefcase = "^0.3.6"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.briefcase]
project_name = "Firefly"
bundle = "com.nebulabroadcast"
version = "5.41.0"
url = "https://nebulabroadcast.com"
license = "GNU General Public License v3 or later (GPLv3+)"
author = 'Nebula Broadcast'
author_email = "info@nebulabroadcast.com"

[tool.briefcase.app.firefly]
formal_name = "Firefly"
description = "Desktop client application for Nebula - Open source media asset management and broadcast automation system."
icon = "images/icon"
sources = ['firefly']
requires = [
    'pyside6',
    'nxtools',
    'websocket-client',
]
